Fix cards card text width and gap

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -123,6 +123,7 @@ li {
     justify-content: center;
 
     width: 67vw;
+    gap: 50px;
 }
 
 .card {
@@ -140,6 +141,7 @@ li {
 
 .card-text {
     margin: 10px;
+    width: 180px;
 }
 
 .quote {
